crates/lang-parse/tests/snapshots/parser__parser_basic addition, no space.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: 4175585119755542187,
        tree: (
            inner: (
                span: (
                    start: 0,
                    end: 3,
                ),
                statements: (
                    span: (
                        start: 0,
                        end: 3,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    statements: [],
                    tail: Some((
                        span: (
                            start: 0,
                            end: 3,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        expr: BinaryOperation((
                            span: (
                                start: 0,
                                end: 3,
                            ),
                            lhs: Literal((
                                span: (
                                    start: 0,
                                    end: 1,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Integer((
                                    span: (
                                        start: 0,
                                        end: 1,
                                    ),
                                    value: 1,
                                    raw: "1",
                                )),
                            )),
                            op: (
                                span: (
                                    start: 1,
                                    end: 2,
                                ),
                                value: Add,
                            ),
                            rhs: Literal((
                                span: (
                                    start: 2,
                                    end: 3,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Integer((
                                    span: (
                                        start: 2,
                                        end: 3,
                                    ),
                                    value: 1,
                                    raw: "1",
                                )),
                            )),
                        )),
                    )),
                ),
            ),
            hash: 16506058389339604428,
        ),
    ),
)
---
