crates/lang-parse/tests/snapshots/parser__parser_basic expr string.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..26,
            statements: StatementList {
                span: 0..26,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [],
                tail: Some(
                    ExpressionStatement {
                        span: 0..26,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attr: [],
                        expr: String(
                            FormatString {
                                span: 0..26,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                parts: [
                                    Content(
                                        StringLiteral {
                                            span: 1..8,
                                            content: "string ",
                                        },
                                    ),
                                    Expression(
                                        StringExpression {
                                            span: 13..14,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            expr: QualifiedName(
                                                QualifiedName {
                                                    span: 9..13,
                                                    extras: ItemExtras {
                                                        leading: LeadingExtras(
                                                            [],
                                                        ),
                                                        trailing: TrailingExtras(
                                                            [],
                                                        ),
                                                    },
                                                    parts: [
                                                        Identifier {
                                                            span: 9..13,
                                                            name: "with",
                                                        },
                                                    ],
                                                },
                                            ),
                                            specification: StringFormatSpecification {
                                                span: 13..13,
                                                precision: None,
                                                width: None,
                                            },
                                        },
                                    ),
                                    Content(
                                        StringLiteral {
                                            span: 14..25,
                                            content: " expression",
                                        },
                                    ),
                                ],
                            },
                        ),
                    },
                ),
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
