crates/lang-parse/tests/snapshots/parser__parser_binary op precedence.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x8838d24a66248a8d",
        output_hash: "0x899d76b3dfc1b0f3",
        tree: (
            span: (
                start: 0,
                end: 9,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 9,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 9,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: BinaryOperation((
                        span: (
                            start: 0,
                            end: 9,
                        ),
                        lhs: BinaryOperation((
                            span: (
                                start: 0,
                                end: 4,
                            ),
                            lhs: QualifiedName((
                                span: (
                                    start: 0,
                                    end: 1,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                parts: [
                                    (
                                        span: (
                                            start: 0,
                                            end: 1,
                                        ),
                                        name: "a",
                                    ),
                                ],
                            )),
                            op: (
                                span: (
                                    start: 1,
                                    end: 2,
                                ),
                                value: PowerXor,
                            ),
                            rhs: Literal((
                                span: (
                                    start: 2,
                                    end: 4,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([
                                        Whitespace((" ")),
                                    ]),
                                ),
                                literal: Integer((
                                    span: (
                                        start: 2,
                                        end: 3,
                                    ),
                                    value: 2,
                                    raw: "2",
                                )),
                            )),
                        )),
                        op: (
                            span: (
                                start: 4,
                                end: 5,
                            ),
                            value: Add,
                        ),
                        rhs: BinaryOperation((
                            span: (
                                start: 6,
                                end: 9,
                            ),
                            lhs: QualifiedName((
                                span: (
                                    start: 6,
                                    end: 7,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                parts: [
                                    (
                                        span: (
                                            start: 6,
                                            end: 7,
                                        ),
                                        name: "b",
                                    ),
                                ],
                            )),
                            op: (
                                span: (
                                    start: 7,
                                    end: 8,
                                ),
                                value: PowerXor,
                            ),
                            rhs: Literal((
                                span: (
                                    start: 8,
                                    end: 9,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Integer((
                                    span: (
                                        start: 8,
                                        end: 9,
                                    ),
                                    value: 3,
                                    raw: "3",
                                )),
                            )),
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
