crates/lang-parse/tests/snapshots/parser__parser_block assignment.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..23,
            statements: StatementList {
                span: 0..23,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [
                    (
                        LocalAssignment(
                            LocalAssignment {
                                span: 0..22,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                attr: Attributes(
                                    [],
                                ),
                                id: Identifier {
                                    span: 0..1,
                                    name: "a",
                                },
                                ty: None,
                                expr: Body(
                                    Body {
                                        span: 4..22,
                                        statements: StatementList {
                                            span: 5..21,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            statements: [
                                                (
                                                    LocalAssignment(
                                                        LocalAssignment {
                                                            span: 5..14,
                                                            extras: ItemExtras {
                                                                leading: LeadingExtras(
                                                                    [],
                                                                ),
                                                                trailing: TrailingExtras(
                                                                    [],
                                                                ),
                                                            },
                                                            attr: Attributes(
                                                                [],
                                                            ),
                                                            id: Identifier {
                                                                span: 5..6,
                                                                name: "a",
                                                            },
                                                            ty: None,
                                                            expr: BinaryOperation(
                                                                BinaryOperation {
                                                                    span: 9..14,
                                                                    lhs: Literal(
                                                                        Literal {
                                                                            span: 9..11,
                                                                            extras: ItemExtras {
                                                                                leading: LeadingExtras(
                                                                                    [],
                                                                                ),
                                                                                trailing: TrailingExtras(
                                                                                    [
                                                                                        Whitespace(
                                                                                            Whitespace(
                                                                                                " ",
                                                                                            ),
                                                                                        ),
                                                                                    ],
                                                                                ),
                                                                            },
                                                                            literal: Integer(
                                                                                IntegerLiteral {
                                                                                    span: 9..10,
                                                                                    value: 1,
                                                                                    raw: "1",
                                                                                },
                                                                            ),
                                                                        },
                                                                    ),
                                                                    op: Spanned {
                                                                        span: 11..12,
                                                                        value: Add,
                                                                    },
                                                                    rhs: Literal(
                                                                        Literal {
                                                                            span: 13..14,
                                                                            extras: ItemExtras {
                                                                                leading: LeadingExtras(
                                                                                    [],
                                                                                ),
                                                                                trailing: TrailingExtras(
                                                                                    [],
                                                                                ),
                                                                            },
                                                                            literal: Integer(
                                                                                IntegerLiteral {
                                                                                    span: 13..14,
                                                                                    value: 2,
                                                                                    raw: "2",
                                                                                },
                                                                            ),
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                    TrailingExtras(
                                                        [
                                                            Whitespace(
                                                                Whitespace(
                                                                    " ",
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                            ],
                                            tail: Some(
                                                ExpressionStatement {
                                                    span: 16..21,
                                                    extras: ItemExtras {
                                                        leading: LeadingExtras(
                                                            [],
                                                        ),
                                                        trailing: TrailingExtras(
                                                            [],
                                                        ),
                                                    },
                                                    attr: Attributes(
                                                        [],
                                                    ),
                                                    expr: BinaryOperation(
                                                        BinaryOperation {
                                                            span: 16..21,
                                                            lhs: QualifiedName(
                                                                QualifiedName {
                                                                    span: 16..17,
                                                                    extras: ItemExtras {
                                                                        leading: LeadingExtras(
                                                                            [],
                                                                        ),
                                                                        trailing: TrailingExtras(
                                                                            [
                                                                                Whitespace(
                                                                                    Whitespace(
                                                                                        " ",
                                                                                    ),
                                                                                ),
                                                                            ],
                                                                        ),
                                                                    },
                                                                    parts: [
                                                                        Identifier {
                                                                            span: 16..17,
                                                                            name: "a",
                                                                        },
                                                                    ],
                                                                },
                                                            ),
                                                            op: Spanned {
                                                                span: 18..19,
                                                                value: Multiply,
                                                            },
                                                            rhs: Literal(
                                                                Literal {
                                                                    span: 20..21,
                                                                    extras: ItemExtras {
                                                                        leading: LeadingExtras(
                                                                            [],
                                                                        ),
                                                                        trailing: TrailingExtras(
                                                                            [],
                                                                        ),
                                                                    },
                                                                    literal: Integer(
                                                                        IntegerLiteral {
                                                                            span: 20..21,
                                                                            value: 3,
                                                                            raw: "3",
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    },
                                ),
                            },
                        ),
                        TrailingExtras(
                            [],
                        ),
                    ),
                ],
                tail: None,
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
